# self-hosted-ai

./: .cloudflare-zone-id  .coverage  .env.example  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  GITLAB_ACCESS_INSTRUCTIONS.md  LICENSE  OPERATIONS.md  PR_SUMMARY.md  README.md  SIGN_TWO_COMMITS.md  Taskfile.yaml  VERSION  commit-and-pr.sh  kickoff.md  mkdocs.yml  pyproject.toml  sign-all-commits.sh  sign-last-two.sh  sign-specific-commits.sh
.claude/: settings.json
.claude/agents/: argocd-sync-monitor.md  k8s-validator.md  python-test-runner.md
.githooks/: pre-commit-docs
.github/: LOCAL_CI_ONLY.md
.github/workflows/: argocd-sync.yml  docker-build.yml  docs-build.yml  docs.yml  multi-arch-build.yml  platform-validation.yml  python-tests.yml  rust-build.yml
.github/workflows-disabled-remote-ci/: docs.yml  python-tests.yml  rust-build.yml  validate-docs.yml
agent-server/: Dockerfile  docker-compose.yml
agent-server/app/: __init__.py  adk_agents.py  auth.py  config.py  database.py  main.py
agents/: README.md  __init__.py  pyproject.toml  requirements.txt
agents/agents/: logging_config.py  metrics.py
agents/agents/adk/: __init__.py  agents.py  base.py  evaluator.py  workflows.py
agents/agents/specialized/: multimodal.py
agents/core/: __init__.py  base.py  task.py  workflow.py
agents/self_hosted_ai_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/specialized/: __init__.py  code_review.py  development.py  documentation.py  research.py  testing.py
argocd/: agent-server-application.yaml  gpu-worker-application.yaml  server-application.yaml
argocd/applications/: ana-agent-sso.yaml  arc-controller.yaml  arc-runners-amd64.yaml  arc-runners-arm64.yaml  arc-runners-gpu.yaml  arc-runners-org.yaml  argocd-config.yaml  audio-server.yaml  cert-manager-issuers.yaml  cert-manager.yaml  comfyui.yaml  coredns-custom.yaml  dify.yaml  docs-site.yaml  gitlab-postgresql.yaml  gitlab-redis.yaml  gitlab-runners.yaml  gitlab.yaml  gpu-operator-config.yaml  gpu-operator.yaml  gpu-time-slicing-config.yaml  grafana-dashboards.yaml  ingress-redirects.yaml  jaeger.yaml  keycloak.yaml  kyverno.yaml  linkerd-control-plane.yaml  linkerd-crds.yaml  linkerd-viz.yaml  litellm.yaml  loki.yaml  longhorn.yaml  mcp-servers.yaml  n8n.yaml  oauth2-proxy.yaml  ollama-gpu.yaml  ollama.yaml  open-webui.yaml  openobserve.yaml  otel-collector.yaml  (+13 more)
argocd/apps/: root.yaml
argocd/hooks/: restart-statefulset.yaml  verify-statefulset.yaml
argocd/sealed-secrets/: argocd-gitlab-oauth.yaml  dify-oidc-secret.yaml  ghcr-secret.yaml  gitlab-oauth-secret.yaml  gitlab-oidc-provider.yaml  gitlab-oidc-secret.yaml  grafana-oidc-secret.yaml  keycloak-oidc-secret.yaml  litellm-oidc-secret.yaml  n8n-oidc-secret.yaml  n8n-secret-sealed.yaml  prometheus-oidc-secret.yaml  searxng-oidc-secret.yaml  traefik-oidc-secret.yaml  (+1 more)
config/: comfyui-workflow.json  gpu-time-slicing-config.yaml  litellm-config.yml  models-manifest.yml  open-webui-model-presets.json  openwebui-defaults.json.template  openwebui-production.json
context-refactor/: QUICK_REFERENCE_CARD.md  SYSTEM_PROMPT_SPEC_DRIVEN_AGENT.md  compass_artifact_wf-a252fa74-460b-48a9-9ce7-b48c9febddd7_text_markdown.md  env.example  values.yaml
docs/: .doc_hashes.json  API_RATE_LIMITS_REPORT.md  AUTOMATION_GUIDE.md  CERTIFICATE_QUICK_REFERENCE.md  CERTIFICATE_TRUST_GUIDE.md  CLAUDE_OPTIMIZATION_GUIDE.md  CREATIVE_PRODUCTION_SUITE_PLAN.md  CREATIVE_SUITE_DEPLOYMENT.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_SYSTEM_REVIEW.md  GPG_SIGN_ALL_COMMITS_GUIDE.md  GPU_WORKER_AND_GITLAB_SSO_FIX.md  GPU_WORKLOAD_TESTING.md  HOW_TO_BUILD.md  IMAGE_VIDEO_GENERATION_GUIDE.md  INDEX.json  INDEX.md  MANUAL_CLEANUP_TASKS.md  MANUAL_TEST_CHECKLIST.md  MUSIC_PRODUCTION_SUITE.md  QUICK_START_TOKENS.md  SECURITY_ARGOCD_TLS_FIX.md  SECURITY_TLS_VALIDATION_AUDIT.md  SESSION_SUMMARY_2026-02-07.md  SSO_FIXES_SUMMARY.md  SSO_INTEGRATION_GUIDE.md  TEST_STRATEGY.md  UNIVERSAL_AGENT_DOC_OPTIMIZATION.md  USAGE_GUIDE.md  VERIFICATION_REPORT.md
gpu-manager/: Dockerfile  main.py  requirements.txt
gpu-worker/: .env.example  docker-compose.yml
helm/: README.md
helmfile/: helmfile.yaml
image-router/: Dockerfile  main.py  requirements.txt
ingest-service/: Dockerfile  main.py  requirements.txt
mkdocs-docs/: endpoints.md  getting-started.md  index.md
rust-agents/: Cargo.toml  clippy.toml  rustfmt.toml
rust-agents/.cargo/: config.toml
rust-agents/src/: agent_runtime.rs  lib.rs  python_bindings.rs
scripts/: README-TLS-REMEDIATION.md  README.md  api_keys.py  backup-components.sh  backup.py  bootstrap-argocd.sh  bootstrap-openwebui-tools.sh  bootstrap.py  bootstrap.sh  build-docs.sh  cleanup-disk.sh  cleanup-home.sh  comfyui.py  configure-host-system.sh  deploy-gpu-worker.sh  deploy-server.sh  dev_setup.py  download_wan22_simple.py  download_wan22_video_model.py  finalize-podman-migration.sh  fix-all-tls-issues.sh  fix-argocd-cli-callback-api.sh  fix-argocd-cli-callback.sh  fix-argocd-sync-issues.sh  fix-argocd-sync.sh  fix-gpu-worker-and-gitlab-sso.sh  fix-openobserve-longhorn.sh  fix-remaining-apps.sh  fix-tls-validation.py  generate-secrets.sh  generate_index_json.py  harden-pss-enforcement.sh  import-n8n-workflows.sh  install-ca-certificate.sh  manage-keys.sh  migrate_db.py  monitor-rootless-deployment.sh  pyproject.toml  rag_index.py  release.py  (+18 more)
scripts/lib/: __init__.py  config.py  kubernetes.py  secrets.py  services.py
server/: .env.example  .env.multimodal.example  docker-compose.multimodal.yml  docker-compose.searxng.yml  docker-compose.yml
tests/: __init__.py  conftest.py  test_core_base.py  test_core_task.py
third-party-licenses/: README.md
workflows/: README.md  ci_runner_validation.yaml  full_development_cycle.yaml  multimodal_content_processing.yaml  research_and_develop.yaml  research_automation.yaml  service_mesh_verification.yaml  video_production_pipeline.yaml
(+396 files in other folders)
