[package]
name = "agent-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime for concurrent agent execution
tokio = { version = "1.35", features = ["full"] }
# Serialization for API communication and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP client for Ollama API communication - updated to 0.13.1 for async improvements
reqwest = { version = "0.13.1", features = ["json"] }
# Error handling - using anyhow for application errors
anyhow = "1.0"
# Structured error types - updated to 2.0.17 for better error context
thiserror = "2.0.17"
# Logging framework for observability
tracing = "0.1"
tracing-subscriber = "0.3"
# UUID generation for request tracking
uuid = { version = "1.0", features = ["v4"] }
# Python bindings - updated to 0.27.2 for latest async runtime support
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
# PyO3 async integration - updated to 0.27 for compatibility with pyo3 0.27.2
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }

[features]
default = []
# Enable Python extension module compilation
python = ["pyo3", "pyo3-async-runtimes"]

[lib]
name = "agent_runtime"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
